--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,15 @@ div h1 span{
     display: grid;
     grid-template-columns: repeat(4,4fr);
     gap:4px;
-    border-color: black;
-    margin:10px;
-
+    width:80%;
+    margin:auto;
 }
 .cart-btn{
     background-color:orange;
+    margin:auto;
+    width:100%
+}
+.items{
+    text-align:center;
+    padding:5px;
 }
