--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ header{
     display:flex;
     gap:10px;
 }
-ul{
+nav ul{
     list-style-type: none;
 }
 .banner{
@@ -31,4 +31,9 @@ div h1 span{
 .items{
     text-align:center;
     padding:5px;
+}
+.flwr-plnt{
+    display:flex;
+    width:80%;
+    margin:auto;
 }
