some issues fixed

--- a/styles.css
+++ b/styles.css
@@ -58,8 +58,9 @@ div h1 span{
 }
 .flwr-plnt{
     display:flex;
-    width:80%;
-    margin:auto;
+    flex-wrap:wrap;
+    gap:0.5em;
+
 }
 
 .deals {
@@ -67,16 +68,30 @@ div h1 span{
     gap:100px;
 
 }
-.2-deals{
+/* .2-deals{
     display:flex;
     flex-direction:coloum;
     gap:0px;
-}
+} */
 .footer{
     display:flex;
 }
 .plants{
-    text-align: center;
-    /* max-width: 800px; */
-    /* margin:0 auto; */
+    max-width: 800px;
+    margin:0 auto; 
 }
+.flwr-plnt-img img {
+    margin-left:6.5rem;
+    width:60%;
+}
+.flwr-plnt-text {
+    padding: 0px;
+    margin:0;
+}
+.flwr-plnt-text h1{
+    font-size:3rem;
+}
+.flwr-plnt-text ul li{
+    font-size:1.4rem;
+}
+
