--- a/styles.css
+++ b/styles.css
@@ -137,9 +137,6 @@ height: 11rem;
   justify-content: center;
   padding: 10px;
 }
-.footer{
-    display:flex;
-}
 .plants{
     /* align-items: center; */
     text-align: center;
@@ -152,6 +149,38 @@ height: 11rem;
 }
 .card p{
     font-size:1.5rem;
+}
+.join{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* text-align: center; */
+    color: white;
+    background-image: url(/assets/news-letter-bg.png);
+    width: 100vw-10%;
+    height: 50vh;
+    background-size: cover;
+    justify-content: center;
+    font-size:2.7rem;
+    text-align:center;
+    
+}
+.mail{
+    padding: 1rem 0;
+    width:50rem;
+    font-size: 1.1rem;
+    margin-right:-1rem;
+}
+.subs-btn{
+    padding: 1rem 0;
+    width:10rem;
+    background-color: #ff5917;
+    color:white;
+    font-size: 1.1rem;
+    font-weight: bold;
+}
+.footer{
+    display:flex;
 }
 
 
