--- a/styles.css
+++ b/styles.css
@@ -49,17 +49,24 @@ div h1 span{
 .banner div p{
     font-size: 1.5rem;
 }
+.o_plants{
+display:flex;
+flex-direction: column;
+width:100%;
+gap:3rem;
+margin-top:2rem;
+}
 .card{
     display: grid;
     grid-template-columns: repeat(4,4fr);
-    gap:4px;
-    width:80%;
+    gap:1px;
+    width:90%;
     margin:auto;
 }
 .cart-btn{
     background-color:rgb(253, 101, 0);
     padding:0.8rem;
-    width:96%;
+    width:270px;
     font-size: 1.1rem;
     font-weight: bold;
     color:white;
@@ -71,26 +78,39 @@ div h1 span{
 .flwr-plnt{
     display:flex;
     gap:8rem;
-}
-.flwr-plnt-img img {
-    margin-left:30%;
-    margin-top:10%;
+    align-items: center;
     width:80%;
+    }
+.flwr-plnt-img img {
+    margin-left:40%;
+    margin-top:20%;
+    width:100%;
 }
 .flwr-plnt-text {
     padding: 0px;
-    margin-top: 5%;
+    margin-left:12%;
 }
 .flwr-plnt-text h1{
     font-size:3rem;
-    margin-left: -2rem;
 }
 .flwr-plnt-text ul li{
     font-size:1.5rem;
     color: grey;
 }
+.badge {
+  position: absolute;
+  top: 106rem;
+  left: 36rem; 
+  width: 300px;
+}
+
+.badge img {
+  width: 100%;
+  height: auto;
+}
 
 .latest-deals{
+    margin-top:5rem;
     text-align: center;
     font-size: 1.8rem;
 }
@@ -181,7 +201,7 @@ height: 11rem;
 }
 .footer{
     display:flex;
-    height:30vh;
+    height:15vh;
     width: 80vw;
     margin:5% 10%;
     justify-content: space-between;
