--- a/styles.css
+++ b/styles.css
@@ -234,5 +234,19 @@ height: 11rem;
  .navbar li {
   display: none; /* Hide all nav items */
  }
+.banner {
+    flex-direction: column-reverse;
+    text-align: left;
+    margin: 2rem;
+    gap: 2rem;
+  }
+
+  .banner div {
+    width: 100%;
+  }
+
+  .banner-img {
+    width: 100%;
+  }
 
  }
