--- a/styles.css
+++ b/styles.css
@@ -257,5 +257,33 @@ height: 11rem;
   .cart-btn {
     width: 100%;
   }
+  .flwr-plnt {
+    flex-direction: column;
+    gap: 2rem;
+    margin: 2rem auto;
+  }
 
+  .flwr-plnt-img {
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .flwr-plnt-img img {
+    margin-left: 0;
+    margin-top: 0;
+    width: 100%;
+  }
+
+  .flwr-plnt-text {
+    margin: 0 1rem;
+    text-align: left;
+  }
+
+  .flwr-plnt-text h1 {
+    font-size: 2rem;
+  }
+
+  .flwr-plnt-text ul li {
+    font-size: 1.2rem;
+  }
  }
