--- a/styles.css
+++ b/styles.css
@@ -289,4 +289,22 @@ height: 11rem;
    .badge {
     display: none;
   }
- }
+   .deals {
+    flex-direction: column;
+    gap: 2rem;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .two-deals {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .bloom, .ana, .one-deal {
+    width: 80vw;
+    height: 25vh;
+  }
+  
+  }
