--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,7 @@ margin-top:2rem;
     justify-content: center;
 }
 .one-deal{
-    background-image: url(/assets/deal-zabo.png);
+    background-image: url(assets/deal-zabo.png);
     border-radius: 10%;
     width: 45rem;
     height: 24rem;
@@ -150,7 +150,7 @@ margin-top:2rem;
     text-align:center;
 }
 .bloom{
-background-image:url(/assets/deal-bloom.png);
+background-image:url(assets/deal-bloom.png);
 border-radius: 10%;
 width: 21rem;
 height: 11rem;
@@ -187,7 +187,7 @@ height: 11rem;
     align-items: center;
     /* text-align: center; */
     color: white;
-    background-image: url(/assets/news-letter-bg.png);
+    background-image: url(assets/news-letter-bg.png);
     width: 100vw-10%;
     height: 50vh;
     background-size: cover;
