--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,10 @@ div h1 span{
 }
 .items{
     text-align:center;
+
+}
+.items img{
+    width:100%;
 }
 .o_plants{
 display:flex;
@@ -236,6 +240,7 @@ height: 11rem;
 }
 @media (max-width: 768px) {
   header {
+    margin:0px;
     width:99vw;
     flex-direction: row;
     justify-content: space-between;
